; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_api.c_xh_vm_get_seg_desc.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_api.c_xh_vm_get_seg_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seg_desc = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xh_vm_get_seg_desc(i32 %0, i32 %1, %struct.seg_desc* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.seg_desc*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.seg_desc* %2, %struct.seg_desc** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load %struct.seg_desc*, %struct.seg_desc** %6, align 8
  %11 = getelementptr inbounds %struct.seg_desc, %struct.seg_desc* %10, i32 0, i32 2
  %12 = load %struct.seg_desc*, %struct.seg_desc** %6, align 8
  %13 = getelementptr inbounds %struct.seg_desc, %struct.seg_desc* %12, i32 0, i32 1
  %14 = load %struct.seg_desc*, %struct.seg_desc** %6, align 8
  %15 = getelementptr inbounds %struct.seg_desc, %struct.seg_desc* %14, i32 0, i32 0
  %16 = call i32 @xh_vm_get_desc(i32 %8, i32 %9, i32* %11, i32* %13, i32* %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  ret i32 %17
}

declare dso_local i32 @xh_vm_get_desc(i32, i32, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
